// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > handles user input correctly 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has 'base' ('md') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 h-5 w-5"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'large' ('lg') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 h-7 w-7"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'small' ('sm') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'tiny' ('xs') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 h-3 w-3"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has accent variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-accent data-[state=checked]:bg-accent data-[state=checked]:text-accent-content focus-visible:ring-accent"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has error variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-error data-[state=checked]:bg-error data-[state=checked]:text-error-content focus-visible:ring-error"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has info variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-info data-[state=checked]:bg-info data-[state=checked]:text-info-content focus-visible:ring-info"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has primary variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-primary data-[state=checked]:bg-primary data-[state=checked]:text-primary-content focus-visible:ring-primary"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has rounded ('lg') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 rounded-lg"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has rounded ('md') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 rounded-md"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has rounded ('sm') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 rounded-sm"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has rounded ('xs') 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50 rounded-xs"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > has secondary variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-secondary data-[state=checked]:bg-secondary data-[state=checked]:text-secondary-content focus-visible:ring-secondary"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has success variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-success data-[state=checked]:bg-success data-[state=checked]:text-success-content focus-visible:ring-success"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > has warning variant 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50 border-warning data-[state=checked]:bg-warning data-[state=checked]:text-warning-content focus-visible:ring-warning"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > prevent user input when disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
</DocumentFragment>
`;

exports[`Checkbox > renders with an indeterminate state 1`] = `
<DocumentFragment>
  <button
    aria-checked="mixed"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50"
    data-state="indeterminate"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Checkbox > renders with the correct initial state 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer flex items-center justify-center h-4 w-4 shrink-0 rounded-xs border focus-visible:border-base-content focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 focus-visible:ring-base-content disabled:cursor-not-allowed disabled:opacity-50"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
